# wfm-fork

./: README.md  cross.txt  meson.build
include/: resource.h
include/locale/: strings_en.h  strings_zh.h
src/: file_node.c
